[package]
name = "image_processor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1"
# Formats raster classiques : PNG, JPEG, GIF, WebP, TIFF, BMP, etc.
image = "0.25"
# Décodage des RAW constructeurs (Canon, Nikon, Sony, Fuji, Adobe DNG…),
# pur Rust. `imagepipe` dépend de `rawloader` et le réexporte.
imagepipe = "0.5"
rawloader = "0.37"


[profile.release]
opt-level = 3
